--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
     <!-- New Section (above Section 1) -->
     <div class="section">
-		<img src="images/adobe_image1.jpg" alt="New Image1">
+		<img src="images/Presentation1.jpg" alt="New Image1">
         <div class="header">Douglas Stuehler</div>
         <img src="new_image2.jpg" alt="New Image">
         <div class="text">This is the main text for the new section. It can be a description, content, or anything you'd like to display here.</div>
