--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Repetitive Sections Template</title>
+    <title>dougiestuehler.github.io</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -42,43 +42,69 @@
 
     <!-- New Section (above Section 1) -->
     <div class="section">
-		<img src="images/Presentation1.jpg" alt="New Image1">
+		<img src="images/Presentation1.jpg" alt="New Image1" style="width: 60%; height: auto; max-width: 500px;">>
         <div class="header">Douglas Stuehler</div>
-        <img src="new_image2.jpg" alt="New Image">
-        <div class="text">This is the main text for the new section. It can be a description, content, or anything you'd like to display here.</div>
-        <div class="subtext">This is the subtext for the new section, giving additional context or information.</div>
+        <div class="text">I am a post baccalaureate molecular biologist trained in computational biology. My research is driven to uncover and understand the plasticity of genetic information which creates such immense yet controlled diversity. This page showcases research on insects, plants, stingrays, bacteria, and viruses.</div>
+        <div class="text">My current position as a DOE ORISE scholar consists of designing bioinformatic pipelines for research in vector biology and population genetics. My work is supported by a devotion to reduce ambiguity and set biologically informed standards in bioinformatic reseach.</div>
+		<div class="text">I am currently a research scholar of Bioinformatics, Genomics, and Molecular Biology in the USDA-ARS Heck lab at Cornell University, Ithaca. I earned my BS in Molecular biology with a minor in Chemistry in 2021 from the University of Illinois Urbana-Champaign. The major focus of my current research entails finding chinks in the armor of the Huanglongbing tritrpohic pathosystem consisting of pathogen Candidatus Liberibacter asiatics (CLas), vector Diaphorina citri, and host citrus species.</div>
+
     </div>
 
 
     <!-- Section 1 -->
     <div class="section">
-        <div class="header">Section 1 Header</div>
+        <div class="header">Research</div>
+		<div class="subheader">Huanglongbing (HLB)</div>
         <img src="image1.jpg" alt="Image 1">
-        <div class="text">This is the main text for section 1. It can be a description, content, or anything you'd like to display here.</div>
+        <div class="text">This is the main text for section 1. </div>
         <div class="subtext">This is the subtext for section 1, giving additional context or information.</div>
+		
+		<div class="subheader">HLB: Diaphorina citri</div>
+		<div class="text">This is the main text for section 1. </div>
+		
+		<div class="subheader">HLB: Candidatus Liberibacter asiaticus</div>
+		<div class="text">This is the main text for section 1. </div>
+		
+		<div class="subheader">HLB: Agrobacteria and Symbionts</div>
+		<div class="text">This is the main text for section 1. </div>
+		
+		<div class="subheader">HLB: Leuronota fagarae</div>
+		<div class="text">This is the main text for section 1. </div>
+		
+		<div class="subheader">HLB: Mandarin genotypes and HLB tolerance</div>
+		<div class="text">This is the main text for section 1. </div>
     </div>
 
     <!-- Section 2 -->
     <div class="section">
-        <div class="header">Section 2 Header</div>
+        <div class="subheader">Mantabodies - Stingray Nanobodies</div>
         <img src="image2.jpg" alt="Image 2">
-        <div class="text">This is the main text for section 2. It can be a description, content, or anything you'd like to display here.</div>
+        <div class="text">This is the main text for section 2. </div>
         <div class="subtext">This is the subtext for section 2, giving additional context or information.</div>
     </div>
 
     <!-- Section 3 -->
     <div class="section">
-        <div class="header">Section 3 Header</div>
+        <div class="subheader">Cotton Virology</div>
         <img src="image3.jpg" alt="Image 3">
-        <div class="text">This is the main text for section 3. It can be a description, content, or anything you'd like to display here.</div>
+        <div class="text">This is the main text for section 3. </div>
         <div class="subtext">This is the subtext for section 3, giving additional context or information.</div>
     </div>
 
     <!-- Section 4 -->
     <div class="section">
-        <div class="header">Section 4 Header</div>
+        <div class="header">Insect Antiviral Immunity</div>
         <img src="image4.jpg" alt="Image 4">
-        <div class="text">This is the main text for section 4. It can be a description, content, or anything you'd like to display here.</div>
+        <div class="text">This is the main text for section 4. </div>
+        <div class="subtext">This is the subtext for section 4, giving additional context or information.</div>
+    </div>
+	
+	
+	<!-- Section 5 -->
+    <div class="section">
+        <div class="header">Speaking</div>
+        <img src="image4.jpg" alt="Image 4">
+        <div class="text">This is the main text for section 4. </div>
         <div class="subtext">This is the subtext for section 4, giving additional context or information.</div>
     </div>
 
