--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0, initial-scale=1.0">
+	<meta name="viewport" content="width=device-width, initial-scale=1.1, initial-scale=1.1">
     <title>dougiestuehler.github.io</title>
     <style>
         /* Restrict the width of the entire website and center it */
@@ -48,17 +48,17 @@
         }
 
         .text {
-            font-size: 14px;
+            font-size: 15px;
             margin: 10px 0;
         }
 
         .subtext {
-            font-size: 10px;
+            font-size: 11px;
             color: #555;
         }
 
         .subheader {
-            font-size: 18px;
+            font-size: 20px;
             font-weight: bold;
             margin-top: 20px;
 			text-align: center;
@@ -88,7 +88,7 @@
 			<img src="images/biocircos1.jpg" alt="Image 1" style="width: 95%; height: auto; max-width: 500px; margin-bottom: 20px; margin-top: 20px">
             <div class="text">I am currently performing a GWAS to examine vector compentecy of <em>D. citri</em> from four populations, the first study of its kind examining vector competency besides research performed with mosquitos. The ability to acquire and transmit <em>C</em>Las was previously characterized as a heritable trait (https://doi.org/10.1371/journal.pone.0195804) and we attempt to uncover the genetics driving this phenomena. </div>
             
-            <div class="subheader">Metagenomics and Proteomics of <em>Candidatus</em> Liberibacter asiaticus</div>
+            <div class="subheader">Genetics and Genomics of <em>Candidatus</em> Liberibacter asiaticus</div>
 			<img src="images/CLas.png" alt="Image 2" style="width: 90%; height: auto; max-width: 500px; margin-bottom: 20px; margin-top: 20px">
             <div class="text">In handling <em>C</em>Las genomes I have performed associative analytics with <em>D. citri</em> endosymbionts, strain tracking, and effector characterization. I have worked on protocols to enrich for non-eukayotic DNA allowing for deepened sequencing of microbial communities from individual insects. CLas-enriched DNA sequencing paired with strain tracking and high quality SNP analysis will help to trace any outbreaks of antibiotic resistant CLas strains.</div>
                         
@@ -133,11 +133,11 @@
 		<!-- Section 5 -->
 		<div class="section" style="display: flex; justify-content: center; align-items: center; flex-direction: column;">
 		    <div class="header">Field Work</div>
-		    <img src="images/field.jpg" alt="Image 4" style="width: 100%; height: auto; max-width: 500px; margin-bottom: 20px; margin-top: 20px; border: 1px solid black; border-radius: 1px">
+		    <img src="images/field.jpg" alt="Image 4" style="width: 110%; height: auto; max-width: 500px; margin-bottom: 20px; margin-top: 20px; border: 1px solid black; border-radius: 1px">
 		
 		    <!-- Centered video using Flexbox -->
-		    <video width="25%" height="auto" controls style="max-width: 500px; margin-bottom: 1px; margin-top: 10px; border: 1px solid black">
-		        <source src="images/Media1.mp4" type="video/mp4">
+		    <video width="30%" height="auto" controls style="max-width: 500px; margin-bottom: 1px; margin-top: 10px; border: 1px solid black">
+		        <source src="images/Media3.mp4" type="video/mp4">
 		        Your browser does not support the video tag.
 			</video>
             <div class="subtext">Video credit: Dr. Michelle Heck</div>
