--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
             <div class="text">I am currently performing a GWAS to examine vector compentecy of <em>D. citri</em> from four populations, the first study of its kind examining vector competency besides research performed with mosquitos. The ability to acquire and transmit <em>C</em>Las was previously characterized as a heritable trait <a href="https://doi.org/10.1371/journal.pone.0195804">here</a>. We attempt to uncover the genetics driving this phenomena. </div>
             
             <div class="subheader">Genetics and Genomics of <em>Candidatus</em> Liberibacter asiaticus</div>
-			<img src="images/<em>C</em>Las.png" alt="Image 2" style="width: 90%; height: auto; max-width: 500px; margin-bottom: 15px; margin-top: 15px;">
+			<img src="images/CLas.png" alt="Image 2" style="width: 90%; height: auto; max-width: 500px; margin-bottom: 15px; margin-top: 15px;">
             <div class="text">In handling <em>C</em>Las genomes I have performed associative analytics with <em>D. citri</em> endosymbionts, strain tracking, and effector characterization. I have worked on protocols to enrich for non-eukayotic DNA allowing for deepened sequencing of microbial communities from individual insects. <em>C</em>Las-enriched DNA sequencing paired with strain tracking and high quality SNP analysis will help to trace any outbreaks of antibiotic resistant <em>C</em>Las strains.</div>
                         
             <div class="subheader">Transcriptomics of <em>Leuronota fagarae</em></div>
