--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 
 			<div class="subheader">Genetics of Agrobacterium and Symbiont Technology</div>
 			<img src="images/CFBP4424-Atom-pTi-ref-BRIG2.jpg" alt="Image 2" style="width: 70%; height: auto; max-width: 500px; margin-bottom: 15px; margin-top: 15px;">
-            <div class="text">My research of crown gall inducing Agrobacterium species was used to identify putitve genes facilitating gall formation. As part of an ARSX team I further identified Agrobacterium strains and what potential genes would be required to create N2 fixing symbionts, transfected plant tissue supplying nitrogen to plants. </div>
+            <div class="text">My research of crown gall inducing Agrobacterium species was used to identify putitve genes facilitating gall formation. As part of an ARSX team I further identified Agrobacterium strains and what potential genes would be required to create N2 fixing symbionts - transfected plant tissue supplying nitrogen to plants. </div>
 			
             <div class="subheader">Transcriptomics of Mandarin genotypes and HLB tolerance</div>
 			<img src="images/mandarin.png" alt="Image 2" style="width: 80%; height: auto; max-width: 500px; margin-bottom: 15px; margin-top: 15px;">
@@ -112,14 +112,14 @@
         <div class="section">
             <div class="header">Mantabodies - Stingray Nanobodies</div>
             <img src="images/nanobody.png" alt="Image 2" style="width: 85%; height: auto; max-width: 500px; margin-bottom: 15px; margin-top: 15px;">
-            <div class="text">One of my favorite projects is involved with the immune system of stingrays in collaboration with the winners of the 2022 ARSX competition. My part in the project was to assemble and annotate the genomes of the Atlantic and Southern stingrays in order to characterized germline IgNAR loci. As a single domain heavy chain antibody, the IgNAR and its variable region (VNAR) showcases a highly adaptable, stable, and nimble therapeutic molecule. We look to characterize the genetics behind this antibody and explore its use in plants, to bolster their immune systems and fight off foreign pathogens.</div>
+            <div class="text">One of my favorite projects is involved with the immune system of stingrays in collaboration with the winners of the 2022 ARSX competition. My part in the project was to assemble and annotate the genomes of the Atlantic and Southern stingrays in order to characterized germline IgNAR loci. As a single domain heavy chain antibody, the IgNAR and its variable region (VNAR) showcases a highly adaptable, stable, and nimble therapeutic molecule. We look to characterize the genetics behind this antibody and explore its use in plants to bolster their "immune system".</div>
         </div>
 
         <!-- Section 3 -->
         <div class="section">
             <div class="header">Cotton Virology</div>
             <img src="images/Cotton_synteny.png" alt="Image 3" style="width: 100%; height: auto; max-width: 500px; margin-bottom: 15px; margin-top: 15px;">
-            <div class="text">One of the most complicated genomes I have worked with is that of <em>Gossypium hirsutum</em>, an allopolyploid species contributing to at least 90% of cotton production worldwide. Members of the Heck laboratory classified an undiscovered DNA virus, cotton virus A (CotV-A), which now has endogenous sequence identified in many commerical and wild cotton species. My role for this project was to perform chromosomal synteny analysis of <em>G. hirsutum</em> varieties, pathway enrichment analysis of genes surrounding sites of CotV-A integration in <em>G. hirsutum</em> varities, and to classify the aphid transmission factor (ATF) and the virion-associated protein (VAP) through structural analysis. </div>
+            <div class="text">One of the most complicated genomes I have worked with is that of <em>Gossypium hirsutum</em>, an allopolyploid species contributing to at least 90% of cotton production worldwide. Members of the Heck laboratory classified a DNA virus, cotton virus A (CotV-A), which now has endogenous sequence identified in many commerical and wild cotton species. My role for this project was to perform chromosomal synteny analysis of <em>G. hirsutum</em> varieties, pathway enrichment analysis of genes surrounding sites of CotV-A integration in <em>G. hirsutum</em> varities, and to classify the aphid transmission factor (ATF) and the virion-associated protein (VAP) through structural analysis. </div>
             <div class="subtext">M. West-Ortiz, <strong>D. Stuehler</strong>, E. Pollock, J. R. Wilson, S. Preising, A. Larrea-Sarmiento, O. Alabi, M. Fuchs, M. Heck, A. Olmedo-Velarde. Characterization of cotton virus A, a novel and distinct member of the genus Caulimovirus with endogenous viral elements in Gossypium spp. bioRxiv 2023.06.14.544975; doi: https://doi.org/10.1101/2023.06.14.544975 <a href="https://www.biorxiv.org/content/10.1101/2023.06.14.544975v2">bioRxiv preprint</a> </div>
         </div>
 
@@ -164,11 +164,11 @@
         <!-- Section 6 -->
         <div class="section">
 			<div class="header">Mentoring</div>
-			<div class="text">Boyce Thompson Institute, Cornell University, REU Summer Internship mentor (Summer 2024) </div>
-			<div class="subtext" style="margin-top: -10px;">Mentored an undergraduate student on the analysis of sRNA transcriptomics; examining the sRNA response of <em>Myzus persicae</em> to synergistic PLRV infection.</div>
+			<div class="text">Boyce Thompson Institute, Cornell University, REU Summer Internship mentor (Summer 2024). </div>
+			<div class="subtext" style="margin-top: -10px;">Mentored an undergraduate student on the analysis of sRNA transcriptomics; examining the sRNA response of <em>Myzus persicae</em> to synergistic PLRV infection. Congratulations to Aminah Coleman for winning the 2024 Presentation Award in Computational Biology at ABRCMS for this work! </div>
 
             <div class="header" style= "margin-top: 15px">Professional Events</div>
-            <img src="images/posters.jpg" alt="Image 4" style="width: 78%; height: auto; max-width: 500px; margin-bottom: 10px; margin-top: 15px;">
+            <img src="images/misa2024thin.jpg" alt="Image 4" style="width: 150%; height: auto; max-width: 530px; margin-bottom: 10px; margin-top: 15px;">
 
 			<div class="text">FDA-NIH-NIST-USDA Joint Agency Microbiome (JAM) Virtual Symposium (August 2021)</div>
 			<div class="subtext" style="margin-top: -10px;"><strong>Poster presentation - </strong>Comparative transcriptomics of the <em>L. fagarae</em> microbiome and <em>D. citri</em> microbiome.</div>
@@ -183,7 +183,7 @@
 			<div class="subtext" style="margin-top: -10px;"><strong>Poster presentation - </strong>Genome-Wide Association Study Reveals Loci Underlying Pathogen Acquisition by <em>Diaphorina citri</em>, Vector of "<em>Candidatus</em> Liberibacter asiaticus", the Causal Agent of Huanglongbing.</div>
 
 			<div class="text">ITPVBD Biosecurity Workshop (August 2023) - Montpellier, France</div>
-			<div class="subtext" style="margin-top: -10px;">Three day workshop regarding international biosecurity of insect transmitted diseases to facilitate collaboration and brainstorm both preventitve and developmental strategies. </div>
+			<div class="subtext" style="margin-top: -10px;"><strong>Attendee - </strong>Three day workshop regarding international biosecurity of insect transmitted diseases to facilitate collaboration and brainstorm both preventitve and developmental strategies. </div>
 
 			<div class="text">Presentation to Citrus Research Board (CRB) (January 2024) - Fort Pierce, Florida</div>
 			<div class="subtext" style="margin-top: -10px;"><strong>Speaker - </strong><em>C</em>Las strain tracking and mtDNA haplotyping of <em>D. citri</em>.</div>
@@ -194,7 +194,10 @@
 			<div class="text">International Research Conference on Huanglongbing VII (March 2024) - Riverside, California</div>
 			<div class="subtext" style="margin-top: -10px;"><strong>Poster presentation - </strong>Genome-Wide Association Study Reveals Loci Underlying Vector Competency by <em>Diaphorina citri</em>, Vector of "<em>Candidatus</em> Liberibacter asiaticus", the Causal Agent of Huanglongbing.</div>
 
-			<div class="text">(Upcoming) Entomological Society of America (November 2024) - Phoenix, Arizona</div>
+			<div class="text">Materials Innovation for Sustainable Agriculture (November 2024) - University of Central Florida</div>
+			<div class="subtext" style="margin-top: -10px;"><strong>Speaker - </strong>An Introduction to the DOE ORISE program: a launching pad for STEM careers</div>
+
+			<div class="text">Entomological Society of America (November 2024) - Phoenix, Arizona</div>
 			<div class="subtext" style="margin-top: -10px;"><strong>Speaker - </strong>Genome-wide association and population genetics of <em>Diaphorina citri</em>: examining genetics underlying vector capacity of the Huanglongbing insect vector.</div>
 
         </div>
