--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
 			<div class="subtext" style="margin-top: -10px;">Mentored an undergraduate student on the analysis of sRNA transcriptomics; examining the sRNA response of <em>Myzus persicae</em> to synergistic PLRV infection. Congratulations to Aminah Coleman for winning the 2024 Presentation Award in Computational Biology at ABRCMS for this work! </div>
 
             <div class="header" style= "margin-top: 15px">Professional Events</div>
-            <img src="images/misa2024thin.jpg" alt="Image 4" style="width: 150%; height: auto; max-width: 530px; margin-bottom: 10px; margin-top: 15px;">
+            <img src="images/misa2024thin.jpg" alt="Image 4" style="width: 100%; height: auto; max-width: 530px; margin-bottom: 15px; margin-top: 15px;; border: 1px solid black; border-radius: 1px">
 
 			<div class="text">FDA-NIH-NIST-USDA Joint Agency Microbiome (JAM) Virtual Symposium (August 2021)</div>
 			<div class="subtext" style="margin-top: -10px;"><strong>Poster presentation - </strong>Comparative transcriptomics of the <em>L. fagarae</em> microbiome and <em>D. citri</em> microbiome.</div>
